<resources>
    <string name="app_name">EmployeesTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="skills">Skills</string>
    <string name="save">Save</string>
    <string name="cant_open_camera_no_permission">Permission denied to open camera</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="failed_to_insert_skills">Failed to insert skills</string>
    <string name="invalid_mail">Invalid mail</string>
    <string name="invalid_name">Invalid name</string>
    <string name="skill_already_added">Skill already added</string>
    <string name="select_image">Select Image</string>
    <string name="saved">Saved</string>
    <string name="profile_picture">profile picture</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_employee">Add Employee</string>
</resources>